# image_algorithm

./: CMakeLists.txt  package.xml
include/image_algorithm/: disparity_calculator.h  disparity_calculator_cuda.h  stereo_optical_matcher.h  stereo_rectifier.h
scripts/: create_lut_from_kalibr.py
src/app/: test_stereo_match.cc
src/modules/: disparity_calculator.cc  disparity_calculator_cuda.cc  stereo_rectifier.cc
src/tools/: open_usb_cam_display.cc  stereo_disparity.cc  tune_sgbm.cc  tune_sgbm_pcl.cc
